// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-jimo-cloud-actions destination: sendUserdata action - all fields 1`] = `
Object {
  "email": "son@bigemsej.tg",
  "traits": Object {
    "testType": "AhE@R9nwDnhVfKr53",
  },
  "userId": "AhE@R9nwDnhVfKr53",
}
`;

exports[`Testing snapshot for actions-jimo-cloud-actions destination: sendUserdata action - required fields 1`] = `
Object {
  "userId": "AhE@R9nwDnhVfKr53",
}
`;
